--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -24,8 +24,7 @@
         </ul>
     </nav>
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum omnis accusamus dolores, neque maiores quaerat velit cupiditate, dignissimos beatae eius officia veritatis natus rerum nesciunt, voluptatem nam deserunt alias? Sunt.
-        Ut incidunt, mollitia vel odit architecto asperiores praesentium autem dolor ab accusantium cupiditate enim ducimus animi, a nam? Natus, adipisci. Ea maxime molestias sit hic ex quidem ipsa voluptas fugit?</p>
+        <p>¡Completando el formulario podremos ponernos en contacto para realizar cualquier compra a cualquier lado del pais!</p>
     </main>
 
     <form>
