--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
    <link rel="stylesheet" href="css/main.css">
+   <meta name="description" content="Tienda online de venta de productos tecnologicos, sector donde aparecen los productos mas recomendados">
+    <meta name="keywords" content="Computadora gamer,Placa de video,Procesador,Memoria RAM,teclado,">    
     <title>Home</title>
 </head>
 <body>
 
     <header>
         <h1>CN GAMER</h1>
-        <meta name="description" content="Tienda online de venta de productos tecnologicos, sector donde aparecen los productos mas recomendados">
-        <meta name="keywords" content="Computadora gamer,Placa de video,Procesador,Memoria RAM,teclado,">    
     </header>
     <nav>
         <ul>
@@ -26,36 +26,34 @@
             <li><a href="pages/formulario.html">Formulario</a></li>
         </ul>
     </nav>
-    <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero perspiciatis cum earum fuga vitae tempore ratione officia quibusdam facere non excepturi animi, ipsam consequuntur illo natus mollitia asperiores quaerat nam!
-            Maiores, exercitationem provident consectetur totam necessitatibus modi debitis asperiores repellat libero quam unde possimus reprehenderit voluptatibus dicta sed soluta pariatur, nemo inventore earum dolorum nisi doloremque. Aliquam, quis id. Dignissimos.
-            Animi magnam dignissimos mollitia? Atque aliquid reprehenderit, consectetur iste similique aliquam. Cupiditate nostrum, dolorum rem dolore minus, unde odio mollitia eos voluptatem labore error quasi magni sequi aperiam atque perferendis.
-            Enim nemo itaque tempore doloribus vitae, hic rem maxime ipsum, dignissimos est culpa ea animi officiis, beatae dolorem sit in fugiat repellat placeat aliquid voluptatibus accusamus magnam ratione deleniti! Atque!</p>
-        <main>
+  
 
     <main class="imagenes">
+        <p>¡La mejor tienda online de productos gamer de todo el pais por sus precios inmejorables!</p>
             <center>
-            <div id="carouselExampleControls" class="carousel slide col-6" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="img/840_560.jpg" class="d-block w-100" alt="pc1">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="img/419i590IT5L._AC_UL600_SR600,600_.jpg" class="d-block w-100" alt="pc2">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="img/D_NQ_NP_727016-MLA31070773306_062019-W.jpg" class="d-block w-100" alt="pc3">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+           <div class="carousel">
+             <div id="carouselExampleControls" class="carousel slide col-4" data-bs-ride="carousel">
+                 <div class="carousel-inner">
+                   <div class="carousel-item active">
+                     <img src="img/840_560.jpg" class="d-block w-100" alt="pcGamer1">
+                   </div>
+                   <div class="carousel-item">
+                     <img src="img/419i590IT5L._AC_UL600_SR600,600_.jpg" class="d-block w-100" alt="pcGamer2">
+                   </div>
+                   <div class="carousel-item">
+                     <img src="img/D_NQ_NP_727016-MLA31070773306_062019-W.jpg" class="d-block w-100" alt="pcGamer3">
+                   </div>
+                 </div>
+                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                   <span class="visually-hidden">Previous</span>
+                 </button>
+                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                   <span class="visually-hidden">Next</span>
+                 </button>
+               </div>
+           </div>
             </center>
     </main>
 
